# dev_FastAPI

./: Dockerfile  compose.yaml  pyproject.toml
.github/workflows/: pipeline.yml
fast_zero/: app.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 5c4423a21424_adding_new_columns_on_user_and_todos_.py  dc0cb9da233c_create_user_table.py
tests/: conftest.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_user.py
